# Idra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: CODEOWNERS
Assets/Models/Furniture/: MetalTable.mtl  WoodBench.mtl
Assets/Shaders/: Basic.frag  Basic.glsl  Basic.vert  BasicTexture.frag  BasicTexture.glsl  BasicTexture.vert  FlatColour.frag  FlatColour.vert  Skybox.glsl
Editor/: CMakeLists.txt
Editor/include/: Editor.h  ExampleLayer.h  SandboxLayer.h
Editor/src/: Editor.cpp  ExampleLayer.cpp  SandboxLayer.cpp
Idra/: CMakeLists.txt  Idra.h
Idra/include/: Application.h  EntryPoint.h  IdraPCH.h
Idra/include/Core/: Application.h  Core.h  EntryPoint.h  FileLoader.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  Timer.h  Timestep.h  Window.h
Idra/include/Debug/: Instrumentor.h
Idra/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Idra/include/ImGui/: ImGuiLayer.h
Idra/include/Math/: MathFormatters.h
Idra/include/Model/: Mesh.h  Model.h  ModelLoader.h
Idra/include/Platform/: WindowsWindow.h
Idra/include/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLFrameBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h
Idra/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
Idra/include/Renderer/: Buffer.h  Camera.h  CameraController.h  EditorCameraController.h  FrameBuffer.h  Mesh.h  OrthographicCamera.h  PerspectiveCamera.h  RenderCommand.h  Renderer.h  RendererAPI.h  RenderingContext.h  Shader.h  Texture.h  VertexArray.h
Idra/include/Resources/: FileLoader.h
Idra/include/Resources/Image/: Image.h
Idra/include/Resources/Model/: Mesh.h  Model.h  ModelLoader.h
Idra/include/Scene/: Components.h
Idra/src/: Application.cpp  IdraPCH.cpp
Idra/src/Core/: Application.cpp  FileLoader.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Window.cpp
Idra/src/Debug/: Instrumentor.cpp
Idra/src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
Idra/src/Model/: Mesh.cpp  Model.cpp  ModelLoader.cpp
Idra/src/Platform/: WindowsWindow.cpp
Idra/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
Idra/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Idra/src/Renderer/: Buffer.cpp  Camera.cpp  CameraController.cpp  EditorCameraController.cpp  FrameBuffer.cpp  Mesh.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp  RendererContext.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
Idra/src/Resources/: FileLoader.cpp
Idra/src/Resources/Image/: Image.cpp
Idra/src/Resources/Model/: Mesh.cpp  Model.cpp  ModelLoader.cpp
IdraEditor/: CMakeLists.txt
IdraEditor/src/: EditorLayer.cpp  EditorLayer.h  IdraEditor.cpp
Sandbox/: CMakeLists.txt
Sandbox/include/: Sandbox3DLayer.h  SandboxLayer.h
Sandbox/src/: Entrypoint.cpp  Sandbox.cpp  Sandbox3DLayer.cpp  SandboxEditor.cpp  SandboxLayer.cpp
